--- a/css/audio.css
+++ b/css/audio.css
@@ -5,9 +5,7 @@ body {
 	/*background-color: #000;*/
 	/*background: linear-gradient(-65deg, #43C6AC, #F8FFAE);*/
 }
-.player-body.no-responsive {
-	max-width: 320px !important;
-}
+ 
 /*.
 main {
 	margin: 20% auto 5%;
@@ -24,9 +22,10 @@ main {
 	background-color: #2196F3;
 	border-radius: 3px;
 }
-.player-body {
-	/*background-color: #FFFFFF;*/
+.player-body > div{
+	max-width: 100vw;
 }
+ 
 .def-slider {
 	-webkit-appearance: none;
 	width: 100%;
